# linreg

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
linreg/: __init__.py  _data.py  _math.py  _metrics.py  _model.py  _scaler.py  plot.py
tests/: test_data.py  test_integration.py  test_math.py  test_metrics.py  test_model.py  test_scaler.py
